2009-08-30  Raul Mateos  <raulofpandora@gmail.com>

	* extensions/update_manager/main.php: Change Pandora FMS text to 3.0

	* extensions/update_manager/settings.php, godmode/alerts/extensions.php,
	godmode/alerts/alert_list.php, godmode/servers/plugin.php,
	godmode/db/db_sanity.php, godmode/snmp_console/snmp_alert.php,
	godmode/setup/*.php: Unify titles improving integrity of appearance.

2009-08-29  Raul Mateos  <raulofpandora@gmail.com>

	* include/config_process.php: Update build after last changes

	* operation/events/event_statistics.php, operation/extensions.php,
	godmode/alerts/alert*.php, godmode/alerts/configure_alert_compound.php:
	Unify titles, adding parent and change from h1 to h2.

	* operation/agentes/networkmap.php: Added style when agents not found.

2009-08-28  Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/module_groups, extensions/module_groups/icon_menu.png,
	extensions/module_groups.php: add extension to show table of modules where
	the columns is the modules group and the rows is the agents group. And
	this extension use as example in wiki openideas.	

2009-08-28  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: add function get_all_model_groups for to
	get all rows of table "tmodule_group".

2009-08-27  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_db.php,
	  godmode/agentes/modificar_agente.php,
	  godmode/agentes/manage_config_remote.php,
	  godmode/agentes/agent_manager.php: Remote config .conf and .md5 files
	  are now stored in different subdirectories.

2009-08-27  Miguel de Dios  <miguel.dedios@artica.es>

	* index.php: add comments for more readable.
	* include/functions_extensions.php, extensions/update_manager.php,
	extensions/hello, extensions/hello/icon.png, extensions/hello.php,
	operation/menu.php, godmode/menu.php: change the mecanic to add extensions
	into menu, now you can add extension with icon and into the submenu in any